# RgTools

./: .gitignore  CMakeLists.txt  README.md  RgTools.sln
RgTools/: CMakeLists.txt  Files.cmake  RemoveGrainT.cpp  RemoveGrainT.h  RgTools.vcxproj  RgTools.vcxproj.filters  avs2x.cpp  clense.cpp  clense.h  common.h  common_avx2.h  removegrain.cpp  removegrain.h  removegrain_avx2.cpp  repair.cpp  repair.h  repair_functions_c.h  repair_functions_sse.h  rg_functions_avx2.h  rg_functions_c.h  rg_functions_sse.h  rgtools.rc  vertical_cleaner.cpp  vertical_cleaner.h
RgTools/ToBePorted/: Mode17_SmartRg.cpp  Mode25_nondestructivesharpen.cpp  Mode26_SmartRGC.cpp  Mode30_SoftRG18.cpp
RgTools/ToBePorted/nosharpennomodify/: Mode25_nondestructivesharpen.cpp  Mode27_SmartRGCL.cpp  Mode28_SmartRGCL2.cpp  Mode29_SmartRG18.cpp
RgTools/documentation/: RgTools.txt
RgTools/include/avs/: config.h
